--- a/src/pages/slovenia/sday10.astro
+++ b/src/pages/slovenia/sday10.astro
@@ -27,9 +27,9 @@ Difficulty: medium-low
 <p>
 <a href=https://q42.me/trips/slovenia/day10-alpselfie.jpg><img src=https://q42.me/trips/slovenia/day10-alpselfie-small.jpg></a>
 <p>
-Last night we had pizza dinner with a couple, younger (not quite my age) who are friends of Jeff's: Ajda and Domen.  These were super kind and friendly folks, the kind of people I'd want to have dinner parties and game nights with.  (Many of Jeff's friends are just people he's met that aren't very interested in deep conversation or doing more than saying hi).  This couple was different, just friends as far as I could tell without ulterior motives.  Very smart, spoke rather good English, and more aware of recent American history than I am - despite them being Slovenian natives.  It was fun to have a social time with more than Jeff and Jeff's more commercial friends (the proprietors of restaurants and bars and shops) who we generally chat with for <10 minutes and have much the same conversation with the same jokes every time we stop somewhere.  Jeff has a pretty good spiel and it amuses folks but I'm tired of it and could almost deliver it myself by this point...
+Last night we had pizza dinner with a couple, younger (not quite my age) who are friends of Jeff's: Ajda and Domen.  These were super kind and friendly folks, the kind of people I'd want to have dinner parties and game nights with.  I feel like many of Jeff's friends are just people he's met that aren't very interested in deep conversation or doing more than saying hi, but perhaps I'm just too worn out to try?  Anyway, this couple was different, just social friends as far as I could tell.  Very smart, spoke rather good English, and more aware of recent American history than I am - despite them being Slovenian natives.  It was fun to have a social time with more than Jeff and Jeff's more commercial friends (the proprietors of restaurants and bars and shops) who we generally chat with for <10 minutes and have much the same conversation with the same jokes every time we stop somewhere.  Jeff has a pretty good spiel and it amuses folks but I'm tired of it and could almost deliver it myself by this point...
 <p>
-The pizza was pretty good too, and I felt slightly validated when Domen also finished his entire pizza in one sitting and found room for a piece of Jeff's as well, in addition to our two pivos (Slovenian for beers).  Usually I'm eating for two compared to Jeff so it was nice to not be the only overly hungry, fit man at the table.
+The pizza we had was pretty good too, and I felt slightly validated when Domen also finished his entire pizza in one sitting and found room for a piece of Jeff's as well, in addition to our two pivos (Slovenian for beers).  Usually I'm eating for two compared to Jeff so it was nice to not be the only overly hungry, fit man at the table.
 <p>
 Came back to the campground and basically went straight to sleep; I've been sleeping really well in the cool camping nights lately!  Woke up to cows walking past the tent; I was wondering who was rude enough to be stomping around my tent at 6am considering I was intentionally camped far from everything noisy but then I saw hoof from the window and realized it was just nature being itself.
 <p>
@@ -43,7 +43,7 @@ Scrubbed and packed and ate a hearty little breakfast served by the farm, tons o
 <p>
 <i>This water was quite tasty and we did not filter it, friends!</i>
 <p>
-We set out pretty much straight uphill, a couple thousand feet to the pass.  Some small traffic on this hill but nothing too terrible, especially considering it was rush-hour type times even though it's hard to say where people would have been commuting to in this direction, since it was pretty much a mountain pass for the sake of coming down the other side without many turn-offs nor villages.  I kept the power intermediate so I got a bit of a workout but it didn't take years to get up to the top.  Jeff had waited for me at the top which was pretty much the Austrian border, we crossed over and bombed down, stopping to grab some water from a wooden carved man who had a fresh mountain spring coming out of his face (yes, there are pictures!)
+We set out pretty much straight uphill, a couple thousand feet to the pass.  Some small traffic on this hill but nothing too terrible, especially considering it was rush-hour type times even though it's hard to say where people would have been commuting to in this direction, since it was pretty much a mountain pass for the sake of coming down the other side without many turn-offs nor villages.  I kept the power intermediate so I got a bit of a workout but it didn't take years to get up to the top.  Jeff had waited for me at the top which was pretty much the Austrian border, we crossed over and bombed down, stopping to grab some water from a spring topped by a wooden carved man who had fresh cool water coming out of his face.
 <p>
 <a href=https://q42.me/trips/slovenia/day10-austria.jpg><img src=https://q42.me/trips/slovenia/day10-austria-small.jpg></a>
 <p>
@@ -53,12 +53,13 @@ Austrian pavement was not as well maintained as Slovenian pavement, but traffic 
 <p>
 <i>"Could you please help us with our strudel problem?  We have too much and it needs to be eaten for free!"  (I obliged twice)</i>
 <p>
-Pulled up to a friendly lodge in this gorgeous valley with friendly proprietress who chatted with us all evening and morning.  Was immediately given some delightful honey schnapps and a private room for the cost of a shared room.  Had thought about heading back out on a further bike ride, but took a nap in the luxurious double bed in a room of my own, after the first shower in a couple days.  Goofed off on my phone and texted with Lori for a bit before venturing back downstairs to free streudel, more beers, and a sampling of local stews for dinner!  Had to walk off the overeating with a little hike after :)
+Pulled up to <a href="https://www.logarska-dolina.si/en/accommodation/mountain-huts/dom-planincev-mountain-hut">a very friendly lodge</a> in this gorgeous valley with a very kind proprietress who chatted with us all evening and morning and took incredible care of us for a very reasonable price.  VERY!  We were almost the only guests so we got the rockstar treatment for sure, and I look forward to taking Lori back there hopefully under similar timing/circumstances.  Was immediately given some delightful honey schnapps and a private room for the cost of a shared room.  Had thought about heading back out on a further bike ride, but took a nap in the luxurious double bed in a room of my own, after the first shower in a couple days.  Goofed off on my phone and texted with Lori for a bit before venturing back downstairs to free streudel, more beers, and a sampling of local stews for dinner!  Had to walk off the overeating with a little hike after :)
 <p>
 <a href=https://q42.me/trips/slovenia/day10-jeffbeer.jpg><img src=https://q42.me/trips/slovenia/day10-jeffbeer-small.jpg></a>
 <p>
 <a href=https://q42.me/trips/slovenia/day10-dudes.jpg><img src=https://q42.me/trips/slovenia/day10-dudes-small.jpg></a>
 <p>
+<i>Some statues outside the lodge.
     </div>
 
 </main>
