--- a/src/pages/slovenia/sday11.astro
+++ b/src/pages/slovenia/sday11.astro
@@ -24,21 +24,41 @@ Difficulty: medium
 <br>
 <a href="https://www.strava.com/activities/14509341439">Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-woke in the hotel with a plan to eat and then head up to a waterfall hike.  Waterfall was casually 300+ feet tall and at the end of the road in the valley we were staying in.  Ride up to it was +600' in 2 miles so a bit stiff (ebike made it pleasant), then we hiked up 15min to the falls.  There was more hiking to do if we wanted but it was enough to get there.  amazingly, there was  coffee shop up at the falls - up a super steep hiking trail?  The barista mentioned that she hikes up with a backpack full of beer to restock; it was  a super steep (15 minute) hike.  I had a tea with rum and it was only 5 bucks, despite having to be hiked in?  I would have paid extra for the convenience but somehow that doesn't seem to be a thing in this country...
+<a href=https://q42.me/trips/slovenia/day11-slovenia.jpg><img src=https://q42.me/trips/slovenia/day11-slovenia-small.jpg></a>
+<p>
+<a href=https://q42.me/trips/slovenia/day11-yogurt.jpg><img src=https://q42.me/trips/slovenia/day11-yogurt-small.jpg></a>
+<p>
+<i>This yogurt vending machine had amazingly good and cheap yogurt, in the middle of nowhere (next to our lodge)</i>
+<p>
+Woke up in the hotel with a plan to eat, and then head up to a waterfall hike.  Waterfall was casually 300+ feet tall and at the end of the road in the valley we were staying in.  Ride up to it was +600' in 2 miles so a bit stiff (ebike made it pleasant), then we hiked up 15min to the falls.  There was more hiking to do if we wanted - there was another staffed hut an hour and a half higher up! But for us it was enough to get to the falls.  Amazingly, there was a coffee shop up at the falls - up a super steep hiking trail.  The barista mentioned that she hikes up with a backpack full of beer to restock; it was a super steep hike from the road.  I had a tea with rum and it was only 5 bucks, despite having to be hiked in?  I would have paid extra for the convenience but somehow that doesn't seem to be a thing in this country...
+<p>
+<a href=https://q42.me/trips/slovenia/day11-falls1.jpg><img src=https://q42.me/trips/slovenia/day11-falls1-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day11-falls2.jpg><img src=https://q42.me/trips/slovenia/day11-falls2-small.jpg></a>
 <p>
 We then rode back down, picking up our stuff from the hotel (the road to the falls went up the valley and ended, so the first part of our ride was out and back), and said our goodbyes to very gracious host Nina who had insisted on feeding me multiple free strudels during my stay.  I will not return to the states any lighter than I left!
 <p>
+<a href=https://q42.me/trips/slovenia/day11-goodbye.jpg><img src=https://q42.me/trips/slovenia/day11-goodbye-small.jpg></a>
+<p>
+<i>Our hostess with the mostest</i>
 We cruised steadily downhill through the valley to a dumpling restaurant, where I also finally got to try the local soda, "Cockta" which is pretty herbal in comparison to Coca-cola.  I like it!  It was sprinling when we left the hotel so we'd been rain-geared up, but we geared down since now it was time to climb!
+<p>
+<a href=https://q42.me/trips/slovenia/day11-valleybike.jpg><img src=https://q42.me/trips/slovenia/day11-valleybike-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day11-excitement.jpg><img src=https://q42.me/trips/slovenia/day11-excitement-small.jpg></a>
 <p>
 The short route to the campground was about 8 miles;  we took a 20-ish mile "gratuitous" climb instead.  But, Jeff kept saying - "top 5 ride in Slovenia" and he'd taken me on one of my other top5 rides during our Death Valley tour in a box canyon in South California, and batteries make climbs easy...so up we went!  During the lower part of the climb, a lycra-clad local cycling team passed us and we never did catch them despite being battery powered.  Then the climb kicked up - 12% at times - and I struggled in my lower battery setting trying to get a bit of a workout.  I got one;  sweated it up to the top, where it had started sprinkling again but Jeff was waiting at the bar so we had a mountaintop beer before heading essentually 16mi downhill.  There was traffic so we kept pulling off and waiting to get enough room to be able to coast-zoom downhill.
 <p>
+<a href=https://q42.me/trips/slovenia/day11-bigchurch.jpg><img src=https://q42.me/trips/slovenia/day11-bigchurch-small.jpg></a>
+<p>
 We got into a medium-sized town and Jeff went looking for an ATM but we ended up across the street from the largest church in Slovenia, so I went and took a peek.  It was holy-lookin'.
+<p>
+<a href=https://q42.me/trips/slovenia/day11-intotown.jpg><img src=https://q42.me/trips/slovenia/day11-intotown-small.jpg></a>
 <p>
 We coasted the rest of the way into the campground, riding the bike route but the roads were comically small - hard to tell apart from driveways - but also no traffic, so it was quite a pleasant ride into the campground, owned by friend-of-Jeff.
 <p>
+<a href=https://q42.me/trips/slovenia/day11-dinnerexcitement.jpg><img src=https://q42.me/trips/slovenia/day11-dinnerexcitement-small.jpg></a>
+<p>
+<i>My second favorite food type:  cheese and meat stuffed into baked bread!</i>
 We paid and setup camp and found said owner who welcomed us gleefully and sent over schnapps for us to drink;  we had dinner and later there will be a bonfire...
 <p>
     </div>
