--- a/src/pages/slovenia/sday11.astro
+++ b/src/pages/slovenia/sday11.astro
@@ -40,7 +40,8 @@ We then rode back down, picking up our stuff from the hotel (the road to the fal
 <a href=https://q42.me/trips/slovenia/day11-goodbye.jpg><img src=https://q42.me/trips/slovenia/day11-goodbye-small.jpg></a>
 <p>
 <i>Our hostess with the mostest</i>
-We cruised steadily downhill through the valley to a dumpling restaurant, where I also finally got to try the local soda, "Cockta" which is pretty herbal in comparison to Coca-cola.  I like it!  It was sprinling when we left the hotel so we'd been rain-geared up, but we geared down since now it was time to climb!
+<p>
+We cruised steadily downhill through the valley to a dumpling restaurant, where I also finally got to try the local soda, "Cockta" which is pretty herbal in comparison to Coca-cola.  I like it!  It was sprinkling when we left the hotel so we'd been rain-geared up, but we geared down since now it was time to climb!
 <p>
 <a href=https://q42.me/trips/slovenia/day11-valleybike.jpg><img src=https://q42.me/trips/slovenia/day11-valleybike-small.jpg></a>
 <a href=https://q42.me/trips/slovenia/day11-excitement.jpg><img src=https://q42.me/trips/slovenia/day11-excitement-small.jpg></a>
@@ -49,7 +50,7 @@ The short route to the campground was about 8 miles;  we took a 20-ish mile "gra
 <p>
 <a href=https://q42.me/trips/slovenia/day11-bigchurch.jpg><img src=https://q42.me/trips/slovenia/day11-bigchurch-small.jpg></a>
 <p>
-We got into a medium-sized town and Jeff went looking for an ATM but we ended up across the street from the largest church in Slovenia, so I went and took a peek.  It was holy-lookin'.
+We got into a medium-sized town and Jeff went looking for an ATM that didn't exist, and while he looked, we ended up across the street from the largest church in Slovenia, so I went and took a peek.  It was holy-lookin' inside and out.
 <p>
 <a href=https://q42.me/trips/slovenia/day11-intotown.jpg><img src=https://q42.me/trips/slovenia/day11-intotown-small.jpg></a>
 <p>
