--- a/src/pages/slovenia/sday11.astro
+++ b/src/pages/slovenia/sday11.astro
@@ -50,7 +50,7 @@ The short route to the campground was about 8 miles;  we took a 20-ish mile "gra
 <p>
 <a href=https://q42.me/trips/slovenia/day11-bigchurch.jpg><img src=https://q42.me/trips/slovenia/day11-bigchurch-small.jpg></a>
 <p>
-We got into a medium-sized town and Jeff went looking for an ATM that didn't exist, and while he looked, we ended up across the street from the largest church in Slovenia, so I went and took a peek.  It was holy-lookin' inside and out.
+We got into a medium-sized town and Jeff went looking for an ATM that didn't exist, and while he looked, we ended up across the street from the <a href="https://visitsavinjska.com/en/gornji-grad-cathedral/">largest church in Slovenia</a>, so I went and took a peek.  It was holy-lookin' inside and out.
 <p>
 <a href=https://q42.me/trips/slovenia/day11-intotown.jpg><img src=https://q42.me/trips/slovenia/day11-intotown-small.jpg></a>
 <p>
