--- a/src/pages/slovenia/sday12.astro
+++ b/src/pages/slovenia/sday12.astro
@@ -24,16 +24,22 @@ Difficulty: trivial
 <br>
 <a href="https://www.strava.com/activities/14514876659">Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
 Today was a pretty short riding day.  Last night after I wrote we had dinner at the campground restaurant which was tasty and middle-priced, but it featured a meal-stuffed-into-bread which is one of my favorite forms of food.  This one was called <a href="https://en.m.wikipedia.org/wiki/%C4%86evapi">Cevapcici</a> and since I couldn't quite tell what was meant from the menu, it was nice that the table next to us ordered one and I could just ask what it was to order it myself!
 <p>
 We didn't stay up for the bonfire, but it also started raining soon after I laid down so maybe didn't miss anything after all. Woke up early - around 630 - and saw Jeff's bike seemingly most of the way packed so I hustled to get ready myself - only to realize that he was still asleep in his tent and I had misinterpreted his bags being on the bike as being packed.  But it was nice since when he did become ready to go, he wasn't waiting.  I finished a book I was reading in the meantime.
+<p> 
+<a href=https://q42.me/trips/slovenia/day12-underbiking.jpg><img src=https://q42.me/trips/slovenia/day12-underbiking-small.jpg></a>
+<p>
+<a href=https://q42.me/trips/slovenia/day12-rideout.jpg><img src=https://q42.me/trips/slovenia/day12-rideout-small.jpg></a>
 <p>
 Since Jeff didn't have one, I'd created a route for the 6 mile ride and as we were leaving let him know I was going to follow it and he could come along or not.  It was on dirt roads to start with but the goal was to avoid the highway and there it was a success.  As we got into the town which the campground was on the outskirts of, he turned a different way and called to me as though I'd missed a turn, but I just stuck with my route as planned and it took me along the riverbank, very pleasant and traffic free except a couple bikers and pedestrians.  As it exited town, it was back on the street briefly but then some fine underbiking along an increasingly overgrown trail.  However there were occasional bike route signs posted so I assumed it still went through and kept following it until I saw a sign for the camp and turned in.  I ended up beating Jeff to camp although he was sure I was lost and was texting me maps even as I was walking my bike through the campground.
 <p>
+<a href=https://q42.me/trips/slovenia/day12-countryside.jpg><img src=https://q42.me/trips/slovenia/day12-countryside-small.jpg></a>
+<p>
 Jeff had replenished our breakfast oatmeal supplies the day before but accidentally got chocolate flavored oatmeal so we had almost-pudding for breakfast with our coffee (we'd decided to ride to this campground - which had a kitchen, unlike the one we slept at - to cook breakfast).  I enjoyed meeting most of the folks at the campground except one Trump-praising guy .  Had a nice shower, did laundry, and walked back into town with Jeff for lunch and we had very sloppy burgers and beer next to a pond, and walked back on my own to enjoy the lakeside path again since Jeff seemed determined to keep using the road route even on foot and it just wasn't as pleasant as the riverside trail.  To each their own :)
+<p>
+<a href=https://q42.me/trips/slovenia/day12-sunsetclouds.jpg><img src=https://q42.me/trips/slovenia/day12-sunsetclouds-small.jpg></a>
 <p>
 Now for a lazy afternoon though hopefully I'll get to chat with Lori sometime in the next few hours since I miss her.  Tomorrow is supposed to be a longer ride so I'm topping off the batteries after not charging them at all yesterday night in anticipation of today's only-6-miles ride.
 <p>
