--- a/src/pages/slovenia/sday14.astro
+++ b/src/pages/slovenia/sday14.astro
@@ -22,20 +22,35 @@ Descending: more
 <br>
 Difficulty: medium
 <br>
-<a href=>Link to workout in Strava</a>
-<hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
+<a href=https://www.strava.com/activities/14539194703>Link to workout in Strava</a>
 <hr>
 <p>
-got up for fairly early breakfast from the hostel.  It was quite good and the price was right!  Packed up quickly and had to leave the room because Jeff wouldn't stop blaring the news about trump.  I am intentionally not listening to such news all the time, but especially on vacation.  I told him a couple of times already that I didn't want to hear it, from him or from some news source, so instead of belaboring the point I just left and waited for him downstairs.
+<a href=https://q42.me/trips/slovenia/day14-froggy.jpg><img src=https://q42.me/trips/slovenia/day14-froggy-small.jpg></a>
+
+<p>
+Got up for fairly early breakfast from the hostel.  It was quite good and the price was right!  Packed up quickly and had to leave the room because Jeff wouldn't stop blaring the news about trump.  I am intentionally not listening to such news all the time, but especially on vacation.  I told him a couple of times already that I didn't want to hear it, from him or from some news source, so instead of belaboring the point I just left and waited for him downstairs.
+<p>
+<a href=https://q42.me/trips/slovenia/day14-bikepath.jpg><img src=https://q42.me/trips/slovenia/day14-bikepath-small.jpg></a>
 <p>
 Go sunscreened up and packed up and we headed out of town, quickly landing on a nice MUP which took us 15 or so miles out of town before we had to change to riding on the pretty busy highway.  But we just cranked up the e-assist and made short work of it before the bike path started up again, and it took us to our lunch stop in Olimje, a deer farm up a sturdy hill.  We made the climb, came through the automated gates, and immediately a herd of deer crossed the road ahead of me!  We pulled up to some bicycle parking, sat down for lunch of deer goulash, and felt a little cognitive dissonance of eating the cuties.  But it was tasty.
 <p>
+<a href=https://q42.me/trips/slovenia/day14-love.jpg><img src=https://q42.me/trips/slovenia/day14-love-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day14-lunch.jpg><img src=https://q42.me/trips/slovenia/day14-lunch-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day14-reflection.jpg><img src=https://q42.me/trips/slovenia/day14-reflection-small.jpg></a>
+<p>
 zoomed back down and back onto bike paths for much of the rest of the afternoon and took my preferred route (following the bike route) up another stiff hill.  I had the e-assist on medium-high but still worked up a sweat and got dropped by Jeff before the summit, which was a construction zone that I had to wait on a one-way traffic light to pass.  Then it was downhill for Some Time along the bike route, before the bike route and our route diverged and we took a middle-busy road the rest of the way into town - about 6 miles.  But, we saw the rain clouds gathering on the horizon and decided that speed was expedient and we beat the storm into town by about 10 minutes.
+<p>
+<a href=https://q42.me/trips/slovenia/day14-brezice.jpg><img src=https://q42.me/trips/slovenia/day14-brezice-small.jpg></a>
+<p>
+<i>Felt a little like the bike sign welcoming one to Davis, CA</i>
 <p>
 Had a beer in the restaurant under the room we are renting for tonight, then went in the sprinkles to local brewpub reset which had the best radler I've ever tasted, then back to the hotel/restaurant for another cepavici dinner (not as good as the last one, but still good enough!) and then went to one of Jeff's favorite bars, Tochka, a tiki bar on the river.  I was underwhelmed by it, especially by the lack of bathrooms, so came back to the room after one beer (also I was full and tired and wanted to write this!)
 <p>
+<a href=https://q42.me/trips/slovenia/day14-view.jpg><img src=https://q42.me/trips/slovenia/day14-view-small.jpg></a>
+<p>
 Today marks the end of our riding and probably the end of my writing about this trip.  I'll come back and edit it and expand it and interpolate photos later though!
+<p>
+<a href=https://q42.me/trips/slovenia/day14-totem.jpg><img src=https://q42.me/trips/slovenia/day14-totem-small.jpg></a>
 <p>
     </div>
 
