--- a/src/pages/slovenia/sday15.astro
+++ b/src/pages/slovenia/sday15.astro
@@ -27,23 +27,25 @@ Difficulty: medium-low
 <p>
 <a href=https://q42.me/trips/slovenia/day15-coast.jpg><img src=https://q42.me/trips/slovenia/day15-coast-small.jpg></a>
 <p>
-One final hurrah on a day trip out to the coast here in Slsovenia.  We returned home and dumped our camping stuff but then took a 6am train, 2.5 hours to the coast watching the sunrise from the windows.  Read, napped, watched as the train filled up (but not with bikes) and we got out to Koper at 8:30.  Rode into town, had a coffee and walked around the pier watching container ships and tiny boat captains and folks walking their dogs for a few minutes, til a lunch restaurant of Jeff's friends opened.  We had sushi at the restaurant, got some vegan desserts from the restaurant next door in to go boxes for later.  
+One final hurrah on a day trip out to the coast here in Slovenia.  We returned home by evening, and dumped our camping stuff...but then got up early and took a 6am train for 2.5 hours to the coast, watching the sunrise from the windows.  Read, napped, watched as the train filled up - it was fuller than any train we've been on so far, someone sitting in most rows even if a third of the seats were still empty.  But, almost nobody else with bikes got on. We got into the coast city of Koper at 8:30am.  Rode into town, had a coffee and walked around the pier watching container ships and tiny boat captains and folks walking their dogs for a few minutes, til a lunch restaurant of Jeff's friends opened.  We had sushi at the restaurant, and got some vegan desserts from the restaurant next door in to go boxes for later.  
 <p>
 <a href=https://q42.me/trips/slovenia/day15-tunnel.jpg><img src=https://q42.me/trips/slovenia/day15-tunnel-small.jpg></a>
 <p>
-Then we took off for points south along the coast.  There are a few big towns and a few smaller towns along the route and we looped along the coast and through the countryside - some cool tunnels and some nice coastal views as we rode along.
+Then we took off for points south along the coast.  There are a few big towns and a few smaller towns along the route and we looped along the coast and through the countryside - saw some cool tunnels and some consistent/constant nice coastal views as we rode along.
 <p>
 <a href=https://q42.me/trips/slovenia/day15-coastride.jpg><img src=https://q42.me/trips/slovenia/day15-coastride-small.jpg></a>
 <p>
-The weather was pretty nice for much of the day and we had some beers in beach-ish bars and some good people watching.
+The weather was pretty nice for the first part of the day - until midafternoon - and so we had some beers in beach-ish bars and got some good people watching in.  There weren't copious beaches but still a few between the sections of seawall.  Lots of bike paths and carfree streets to be ridden on - and we rode most of the coast of Slovenia which is pretty tiny and pinched between the large coastlines of Italy and Croatia.
 <p>
 <a href=https://q42.me/trips/slovenia/day15-nobikes.jpg><img src=https://q42.me/trips/slovenia/day15-nobikes-small.jpg></a>
 <p>
 <i>This sign means "no bikes".  Good thing Jeff was there to explain it to me because...I sure thought it meant bikes in boats or something?</i?
 <p>
-Didnt take a lot of pictures as we rolled, but ended up in Piran where we had a pretty good seafood platter and some beers for dinner, right as it started raining.  I didn't realize we were still a substantial distance from the train in Koper so we had to try to hurry back so we wouldn't miss it!  Rainy as we hurried up some RIDICULOUS steep hills - I would have had trouble walking up them with a bike, but the e-bikes handled it with aplomb and only a little (ok, kinda a lot of) heavy breathing, but then some nice downhills as we made our way back along the coast through towns and into Koper about 40 minutes before the train.  I chose to ride straight to the train station since I was a little worried about being late but Jeff went to a friend's bar while I wrestled with train schedules and the ticket kiosk.  It ended up being only Jeff and I for the entire train, for the entire 2.5 hour train ride home...little sleepy by the time we got in near 11pm so we came in and crashed pretty quick...satisfying end to 880km!  I'll be back!
+I didnt take a lot of pictures as we rolled.  We ended up in the town of Piran where we had a pretty good seafood platter and some beers for dinner - right as it started raining.  I didn't realize we were still a substantial distance from the train in Koper at this point, so after dinner we to hurry back so we wouldn't miss the last train!  Raining a bit hard as we hurried up some RIDICULOUS steep hills - I would have had trouble walking up them with a bike, but the e-bikes handled them with aplomb and only a little (ok, kinda a lot of) heavy breathing, but then we also had some nice downhills as we made our way back along the coast through towns and into Koper about 40 minutes before the train.  I chose to ride straight to the train station since I was a little worried about being late but Jeff went to a friend's bar while I wrestled with train schedules and the ticket kiosk.  It ended up being only Jeff and I on the entire train, for the entire 2.5 hour train ride home!  I was little sleepy by the time we got in near 11pm so we came in and crashed pretty quick.
 <p>
 <a href=https://q42.me/trips/slovenia/day15-mail.jpg><img src=https://q42.me/trips/slovenia/day15-mail-small.jpg></a>
+<p>
+All in all, a satisfying end to 880km!  I'll be back!
 <p>
     </div>
 
