--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -16,11 +16,11 @@ import Layout from '../components/Layout.astro';
 <p>
 <p>
 <h3>Trip Summary</h3>
-<b>Distance: 510ish miles</b>
+<b>Total Distance: 510ish miles / 880 km</b>
 <br>
-<b>Climbing: 38309 feet</b>
+<b>Total Climbing: 38309 feet</b>
 <br>
-<b>Difficulty: fairly easy (using e-bikes)</b>
+<b>Difficulty: fairly easy (since we were using e-bikes)</b>
 <br>
 <b><a href="https://ridewithgps.com/events/383616-slovenia-tour-2025">Link to final route in RidewithGPS</a></b>
 <br>
@@ -29,7 +29,7 @@ import Layout from '../components/Layout.astro';
 <h3><a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Full photo gallery from this trip</a></h3>
 <br>
 <p>
-Friend Jeff Bernards, who led our tour from Death Valley to San Diego back in Feb 2011, invited me to bike with him around his adopted homeland of Slovenia in May 2025.  Below you'll find my write up of our travels, wherein we saw many beautiful things and met many wonderful people, traveling on e-bikes through the mountains and countryside.
+My friend Jeff Bernards, who led myself and a dozen others on a tour from Death Valley to San Diego back in Feb 2011, invited me to bike with him around his adopted homeland of Slovenia in May 2025.  Below you'll find my photodocumented write up of our travels, wherein we saw many beautiful things and met many wonderful people, traveling on e-bikes through the mountains and countryside.  I enjoyed the Alps, the food, the people, and the way this country clearly took care of its infrastructure and its citizens.
 <p>
 <a href=sday0>Day 0 - Preparing around Ljubljana</a>
 <br>
