--- a/src/pages/slovenia/sday15.astro
+++ b/src/pages/slovenia/sday15.astro
@@ -39,7 +39,7 @@ The weather was pretty nice for the first part of the day - until midafternoon -
 <p>
 <a href=https://q42.me/trips/slovenia/day15-nobikes.jpg><img src=https://q42.me/trips/slovenia/day15-nobikes-small.jpg></a>
 <p>
-<i>This sign means "no bikes".  Good thing Jeff was there to explain it to me because...I sure thought it meant bikes in boats or something?</i?
+<i>This sign means "no bikes".  Good thing Jeff was there to explain it to me because...I sure thought it meant bikes in boats or something?</i>
 <p>
 I didnt take a lot of pictures as we rolled.  We ended up in the town of Piran where we had a pretty good seafood platter and some beers for dinner - right as it started raining.  I didn't realize we were still a substantial distance from the train in Koper at this point, so after dinner we to hurry back so we wouldn't miss the last train!  Raining a bit hard as we hurried up some RIDICULOUS steep hills - I would have had trouble walking up them with a bike, but the e-bikes handled them with aplomb and only a little (ok, kinda a lot of) heavy breathing, but then we also had some nice downhills as we made our way back along the coast through towns and into Koper about 40 minutes before the train.  I chose to ride straight to the train station since I was a little worried about being late but Jeff went to a friend's bar while I wrestled with train schedules and the ticket kiosk.  It ended up being only Jeff and I on the entire train, for the entire 2.5 hour train ride home!  I was little sleepy by the time we got in near 11pm so we came in and crashed pretty quick.
 <p>
