--- a/src/pages/slovenia/sday7.astro
+++ b/src/pages/slovenia/sday7.astro
@@ -58,6 +58,8 @@ In town, at the first bar, Jeff calls the tourism office in a town just over the
 <p>
 We debate it a bit more and Jeff concedes that to be turned back at the pass would torpedo our day - too many miles and feet climbed to reroute AFTER the fact, so we'll have to try the other way, and thus will we unexpectedly ride through Italy tomorrow.  It's less climbing and the same distance, so I'm excited to see how it goes!
 <p>
+We exchange info with Rita so we can potentially meet up again when we're all back in Ljubljana after we've wrapped up our travels and spoiler alert, we do get together for dinner back in town!  Yay for new friends.
+<p>
 We have another beer at the other bar in town that has microbrews, and wait for a friend of Jeff's who doesn't show up.  But we had a pretty amazing meal, starring the side salad with local goat cheese, pumpkin seeds, and pumpkin seed oil which is a bit of a local delicacy.  Back at the campground now, with a couple beers chilling in the river.  This is pretty great!
 <p>
 </div>
