--- a/src/pages/canada.astro
+++ b/src/pages/canada.astro
@@ -30,7 +30,7 @@ Wanting to see the world beyond my increasingly disappointing country, I decided
 <p>
 <h3>Major thanks to Albert and Hillary for company of several days, and to the dozens of others who did me kindnesses big and small and helped keep me fed and kept my spirits up.</h3>
 <p>
-I've only gone back and edited and interpolated photos for about the first third of these posts.  Maybe I'll get back to doing the rest someday...
+I've only gone back and edited my entries for about the first third of these posts.  Maybe I'll get back to doing the rest someday...
 <p>
 
 <center><h3><b>Part 1: Setting out through British Columbia and the Rocky Mountains</b></h3></center>
