--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,108 +14,14 @@ import Layout from '../components/Layout.astro';
 <hr>
       </div>
 <p>
-<a href="https://fool.medium.com/the-first-days-of-the-rest-of-my-life-1d2bc2852991">I retired in January 2024</a> and spent the next 8 months preparing for and then taking a bicycle trip across much of Canada;  you can <a href=#canada>read about that below.</a>
-<p>
 <hr>
 <b>In May 2025 I toured Slovenia.  You can <a href="slovenia">read about that here</a>.</b>
 <p>
 <b>In January 2025 I did a short tour in Central California, which <a href="vsummary">you can read about here</a></b>
 <p>
-<a name=canada>
-<center><h2>Canadian Tour Summer 2024</h2></center>
-During winter 2024-2025, I'm working on editing all the entries, many of which were brief and businesslike, adding more photos and fun stories and making things easier to read.  As of January 2025, I've currently edited the entries up through 24 Jun.  The rest are still readable but in a bit rougher shape; reader beware!
+<a href="https://fool.medium.com/the-first-days-of-the-rest-of-my-life-1d2bc2852991">I retired in January 2024</a> and spent the next 8 months preparing for and then taking a bicycle trip across much of Canada;  you can <a href="canada">read about that here.</a>  <b>This was my biggest tour in many years and has the most content on this site.</b>
 <p>
 
-<center><h3><b>Part 1: Setting out through British Columbia and the Rocky Mountains</b></h3></center>
-
-<a href=/day0>26 May 2024: Hurry up and wait</a>
-<a href=/day1>27 May 2024: To the Edge</a>
-<a href=/day2>29 May 2024: A Host with the Most</a>
-<a href=/day3>30 May 2024: Seduced by well-meaning MUP's</a>
-<a href=/day4>31 May 2024: Underbiking Overload to Hope</a>
-<a href=/day5>01 Jun 2024: Valley of (liquid) Sunshine</a>
-<a href=/day6>02 Jun 2024: Uphill, in the rain, both ways</a>
-<a href=/day7>03 Jun 2024: More downhill than up</a>
-<a href=/day8>05 Jun 2024: Over the River and through the Valley</a>
-<a href=/day9>06 Jun 2024: A good, very hard, day</a>
-<a href=/day10>07 Jun 2024: A pleasant downhill from the summit</a>
-<a href=/day11>08 Jun 2024: Yeehaw Rail Trail!</a>
-<a href=/day12>09 Jun 2024: Steadily delightful</a>
-<a href=/day13>11 Jun 2024: First Bear</a>
-<a href=/day14>12 Jun 2024: Time to Think</a>
-<a href=/day15>13 Jun 2024: Finally found the mosquitoes</a>
-<a href=/day16>14-16 Jun 2024: I rode my bike to another timezone!</a>
-<a href=/day17>17 Jun 2024: UnderBirthdayBiking</a>
-<a href=/day18>18 Jun 2024: A++ would ride again!</a>
-<a href=/day19>19 Jun 2024: Resting at the springs</a>
-<a href=/day20>20 Jun 2024: Standing on the shoulders of giants</a>
-<a href=/day21>21 Jun 2024: The Climb before the Bomb</a>
-<a href=/day22>22 Jun 2024: Cognitive Dissonance</a>
-<a href=/day23>23 Jun 2024: Remotely Interesting</a>
-<a href=/day24>24 Jun 2024: Working a double</a>
-<a href=/day25through28>27-30 Jun 2024: Riding with Lori</a>
-
-<hr>
-
-<h3><b>Part 2: Picking up after the prairies, long lonely miles</b></h3>
-
-<a href=/daysbetween>19 Jul 2024: mini-recap of the time since I last rode</a>
-<a href=/day29>20 Jul 2024: Middle of Somewhere</a>
-<a href=/day30>22 Jul 2024: Onwards through the fog</a>
-<a href=/day31>23 Jul 2024: Back to where the land has interesting topography</a>
-<a href=/day32>24 Jul 2024: Around the water and through the woods</a>
-<a href=/day33>25 Jul 2024: Short but Stout</a>
-<a href=/day34>27 Jul 2024: Hot and Stormy</a>
-<a href=/day35>28 Jul 2024: Fast and Wet</a>
-<a href=/day36>29 Jul 2024: Yet Another Interstitial Pilgrimage</a>
-<a href=/day37>30 Jul 2024: Rolling Thunder</a>
-<a href=/day38>3 Aug 2024: Fast Miles back towards Nowhere</a>
-<a href=/day39>4 Aug 2024: Beautifully Hilly</a>
-<a href=/day40>5 Aug 2024: Beautifully Hilly Part Two</a>
-<a href=/day41>6 Aug 2024: Up, up, and away</a>
-<a href=/day42>7 Aug 2024: Discouraged, Encouragingly?</a>
-<a href=/day43>9 Aug 2024: The Hills Are Alive</a>
-<a href=/day44>10 Aug 2024: A Blustery Seaside Ride</a>
-<a href=/day45>11 Aug 2024: Superior Goodbyes</a>
-<a href=/day46>13 Aug 2024: Huronwards</a>
-<a href=/day47>14 Aug 2024: Fast then Frustrating</a>
-<a href=/day48>15 Aug 2024: Heating Up</a>
-<a href=/day49>16 Aug 2024: Holy Rollers</a>
-<a href=/day50>18 Aug 2024: Dodging Downpours</a>
-<a href=/day51>19 Aug 2024: Rail Trails all the way</a>
-
-<hr>
-
-<h3><b>Part 3: The final push through more populated miles</b></h3>
-
-<a href=/day52>20 Aug 2024: Back Into Civilization</a>
-<a href=/day53>21 Aug 2024: Into the 4th largest city in North America</a>
-<a href=/day54>26 Aug 2024: Hot & Hilly Coastline</a>
-<a href=/day55>27 Aug 2024: More Hot Times at Lake Ontario</a>
-<a href=/day56>28 Aug 2024: A Short Slog</a>
-<a href=/day57>29 Aug 2024: Rollin' on Up</a>
-<a href=/day58>30 Aug 2024: A delightful ride into Ottawa</a>
-<a href=/day59>2 Sep 2024: La Route Verte!</a>
-<a href=/day60>3 Sep 2024: Bucolic miles towards Montreal</a>
-<a href=/day61>4 Sep 2024: Mostly Trails into Montreal</a>
-<a href=/canada-wrapup>9 Sep 2024: Ending my tour in Montreal</a>
-
-<hr>
-
-<h3><b>Some posts from before I set out on this trip, about gear and preparation, physical and mental</b></h3>
-<a href=/routeplanning-1>30 Dec 2023: Route Planning</a>
-<a href=https://fool.medium.com/the-first-days-of-the-rest-of-my-life-1d2bc2852991>21 Jan 2024:  The first days of the rest of my life</a>
-<a href=https://fool.medium.com/on-the-why-of-adventuring-and-how-im-approaching-my-new-direction-in-life-5039bf0c0781>22 Jan 2024: Happy Accidents</a>
-<a href=/a-short-and-bumpy-start>16 Feb 2024: A Short and Bumpy Start</a>
-<a href=/shakedown-ride-and-campout>20 Feb 2024: Shakedown Ride and Campout</a>
-<a href=/loops-vs-outnbacks>21 Feb 2024: Loops versus Out-and-backs</a>
-<a href=https://fool.medium.com/silver-linings-3807642529ea>7 Mar 2024: Delays and Silver Linings</a>
-<a href=/back-on-track>15 May 2024: Back on Track!</a>
-<h3>
-
-
-
-			<div class="resource-list">
 <hr>
 I've linked some older blogs about trips below.
         <ul>
