--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,9 +19,11 @@ import Layout from '../components/Layout.astro';
 <p>
 <b>In January 2025 I did a short tour in Central California, which <a href="vsummary">you can read about here</a></b>
 <p>
-<a href="https://fool.medium.com/the-first-days-of-the-rest-of-my-life-1d2bc2852991">I retired in January 2024</a> and spent the next 8 months preparing for and then taking a bicycle trip across much of Canada;  you can <a href="canada">read about that here.</a>  <b>This was my biggest tour in many years and has the most content on this site.</b>
+<a href="https://fool.medium.com/the-first-days-of-the-rest-of-my-life-1d2bc2852991">I retired in January 2024</a> and spent the next 8 months preparing for and then taking a bicycle trip across much of Canada;  you can <a href="canada">read about that here.</a>  <b>This was my biggest tour in many years and has the most to read about.</b>
 <p>
 
+<h3>
+			<div class="resource-list">
 <hr>
 I've linked some older blogs about trips below.
         <ul>
@@ -38,5 +40,6 @@ I've linked some older blogs about trips below.
       </div>
     </div>
 	</main>
+</h3>
 <center>You can email me:  gently at gmail.com</center>
 </Layout>
