--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,8 @@ import Layout from '../components/Layout.astro';
 <hr>
       </div>
 <p>
+<a href="https://q42.me/trips/valley/vday6.jpg"><img src=https://q42.me/trips/valley/vday6-best-small.jpg></a>
+<p>
 <hr>
 <b>In May 2025 I toured Slovenia.  You can <a href="slovenia">read about that here</a>.</b>
 <p>
