--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import Layout from '../components/Layout.astro';
 <p>
 <b>In January 2025 I did a short tour in Central California, which <a href="vsummary">you can read about here</a></b>
 <p>
-<b><a href="https://fool.medium.com/the-first-days-of-the-rest-of-my-life-1d2bc2852991">I retired in January 2024</a> and spent the next 8 months preparing for and then taking a bicycle trip across much of Canada;  you can <a href="canada">read about that here.</a>  This was my biggest tour in many years and has the most to read about.</b>
+<b><a href="https://fool.medium.com/the-first-days-of-the-rest-of-my-life-1d2bc2852991">I retired in January 2024</a> and spent the next 8 months preparing for and then taking a bicycle trip across much of Canada;  you can <a href="canada">read about that here.</a>  This was my biggest tour since my first in 2007 - see Texas to Alaska below - and has the most to read about.</b>
 <p>
 <b>I've linked some older blogs about trips below.</b>
 
