update ridewithgps embed

--- a/src/pages/valley2.astro
+++ b/src/pages/valley2.astro
@@ -23,7 +23,7 @@ import Layout from '../components/Layout.astro';
 <br>
 <b><a href="https://ridewithgps.com/routes/52891806">Link to proposed route in RidewithGPS</a></b>
 <br>
-<iframe src="https://ridewithgps.com/embeds?type=event&eventId=346043&sampleGraph=true&defaultShowAll=true" style="width: 1px; min-width: 100%; height: 700px; border: none;" scrolling="no"></iframe>
+<iframe src="https://ridewithgps.com/embeds?type=route&id=52891806&sampleGraph=true" style="width: 1px; min-width: 100%; height: 700px; border: none;" scrolling="no"></iframe>
 <br>
 <h3><a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Full photo gallery from this trip</a></h3>
 <br>
