--- a/src/pages/valley2.astro
+++ b/src/pages/valley2.astro
@@ -35,11 +35,9 @@ Late last year, I was getting a little cabin fevery during the rainy, cold and d
 Since I can easily get to Sacramento by train, I plan to arrive in Sacramento in early November and ride south to Los Angeles.
 <p>
 Once I get started, you can read more about the trip in the individual daily journals linked below, which will also link to my per-day routes on Strava.
-<!--
 <p>
-<a href=vvday0>Day 0 - Sacramento to </a>
-<br>
-<a href=vvday1>Day 1 - to </a>
+<a href=vvday1>Day 1: Sacramento to Stockton</a>
+<!--
 <br>
 <a href=vvday2>Day 2 - to </a>
 <br>
