--- a/src/pages/valley2.astro
+++ b/src/pages/valley2.astro
@@ -37,10 +37,10 @@ Since I can easily get to Sacramento by train, I plan to arrive in Sacramento in
 Once I get started, you can read more about the trip in the individual daily journals linked below, which will also link to my per-day routes on Strava.
 <p>
 <a href=vvday1>Day 1: Sacramento to Stockton</a>
+<br>
+<a href=vvday2>Day 2: Stockton to campground near Livingston</a>
+<br>
 <!--
-<br>
-<a href=vvday2>Day 2 - to </a>
-<br>
 <a href=vvday3>Day 3 - to </a>
 <br>
 <a href=vvday4>Day 4 - </a>
