--- a/src/pages/valley2/vvday2.astro
+++ b/src/pages/valley2/vvday2.astro
@@ -3,31 +3,41 @@
 import Layout from '../../components/Layout.astro';
 ---
 
-<Layout title="TITLE">
+<Layout title="Agrarian tailwinds">
 	<main>
     <svg id="background" width='1728' height='1235' viewBox="0 0 1728 1235" fill='none' xmlns='http://www.w3.org/2000/svg'><g opacity='0.75' filter='url(#filter0_f_39_143)'><circle cy='1000' r='264' fill='url(#paint0_linear_39_143)'/></g><g opacity='0.65' filter='url(#filter1_f_39_143)'><circle cx='1720' cy='264' r='379' fill='url(#paint1_linear_39_143)'/></g><defs><filter id='filter0_f_39_143' x='-485' y='515' width='970' height='970' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><filter id='filter1_f_39_143' x='1120' y='-336' width='1200' height='1200' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><linearGradient id='paint0_linear_39_143' x1='196.5' y1='902' x2='-2.55853e-05' y2='1264' gradientUnits='userSpaceOnUse'><stop stop-color="var(--bttm-left-blur-1)"/><stop offset='1' stop-color="var(--bttm-left-blur-2)"/></linearGradient><linearGradient id='paint1_linear_39_143' x1='1720' y1='-115' x2='1720' y2='643' gradientUnits='userSpaceOnUse'><stop stop-color="var(--top-right-blur-1)"/><stop offset='1' stop-color="var(--top-right-blur-2)" /></linearGradient></defs></svg>     
     <div id="content">
       <div class="header">
-        <h1>TITLE</h1>
+        <h1>Agrarian tailwinds</h1>
         <h2>
-           LEAD-IN
+           over the canals and through the fields
         </h2>
       </div>
 <h3>Ride Summary</h3>
-Distance:
+Distance: 82mi
 <br>
-Climbing:
+Climbing: 1000 feet
 <br>
-Descending:
+Descending: similar
 <br>
-Difficulty:
+Difficulty: medium (easy-ish but long)
 <br>
-<a href=>Link to workout in Strava</a>
+<a href="https://www.strava.com/activities/16379480629">Link to workout in Strava</a>
 <hr>
 <a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
 <hr>
 <p>
-CONTENT
+Got some reasonable sleep on day 2 in Stockton (was waiting for a storm to blow through; it did).  Got up and packed kinda leisurely, but was still on the prowl for breakfast before 7am.  Hit up a don't-speak-English kinda tacqueria and got a pretty good breakfast burrito.  Gave a distraught lady outside the place my change though it was clear she wanted my breakfast (still in hand).  I probably should have given it to her and gone back for more but I was only feeling so generous.  Got checked out and "since my coffeemaker didn't work" the front desk gave me a free gatorade saving me a convenience store stop and so then I rolled out of town.
+<p>
+I took Copperopolis road for about 10 miles and it was good.  Way better than the 4-lane freeway shoulder that was my other option!  Had snacks as I rolled through some small town, then went a couple miles out of the way before I left the last big town I would see today, to have lunch in a restaurant.  The bagel sandwich was great!
+<p>
+Modesto is, as far as I can tell, mostly riverside bike paths (that's about all I saw, hence my doubling back to get fed as the path runs clear to the end of town!).  Decent bike facilities in that town at least, and no real troubles to report on the road today.
+<p>
+Rolled into camp around 4pm and was greeted by a ranger and some cats.  Got a campsite paid for and didn't even have bags off my bike before a cat was rubbing my ankles.  This guy was fearless; all the others have kept varying distances from me, though some of those distances were feet, others were 100 feet.
+<p>
+Ranger passed back through and hooked me up with change for a dollar, since there is nowhere anywhere nearby to try to get my own change (campground/park are just across the river from town.  Road to town is pretty indirect, 5mi+ to work back around and cross the river).  Thus did I get a great and necessary shower - the road grime was pretty intense today!
+<p>
+Tomorrow I'll have a really long ride to fresno, or maybe I'll call it off at 65mi in Merced and stay there.  TBD!
 <p>
     </div>
 
