--- a/src/pages/valley2.astro
+++ b/src/pages/valley2.astro
@@ -40,8 +40,7 @@ Once I get started, you can read more about the trip in the individual daily jou
 <br>
 <a href=vvday2>Day 2: Stockton to campground near Livingston</a>
 <br>
-<!--
-<a href=vvday3>Day 3 - to </a>
+<a href=vvday3>Day 3: Campground to Fresno</a>
 <br>
 <a href=vvday4>Day 4 - </a>
 <br>
